--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,7 +7,9 @@
     <title>Vite + React</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div class="d-flex justify-content-center align-items-center" style="min-height: 90vh;">
+      <div id="root" style="min-width: 60%;"></div>
+    </div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
